# pytorch_tutorials

./: .gitignore  README.md
Deploying PyTorch Models in Production/: TorchScript.ipynb
Deploying PyTorch Models in Production/c_load/: CMakeLists.txt  load_model.cpp  mask.sh  run.sh
Deploying PyTorch Models in Production/flask/: flask_deploy.py  get_respose.py
Extending PyTorch/: Custom Python Operators.ipynb  Double Backward with Custom Functions.ipynb  Fusing Convolution and Batch Norm using Custom Function.ipynb
Fronted APIs/: Channels Last Memory Format.ipynb  Dynamic Parallelism in TorchScript.ipynb  Forward-mode Automatic Differentiation.ipynb  Model ensembling.ipynb  Per-sample-gradients.ipynb  composing function transforms.ipynb
Fronted APIs/Autograd in C++ Frontend/: CMakeLists.txt  main.cpp  make_file.sh
Fronted APIs/Using the PyTorch C++ Fronted/: CMakeLists.txt  Using the PyTorch C++ Fronted.ipynb  dcgan.cpp  dcgan_draft.cpp  make_file.sh  语义.cpp
Lean The Basis/: Build the Neural Network.ipynb
Parallel and Distributed Training/: FSDP.py  Getting Started with Distributed Data Parallel.py  dist_exampler.py  通信方法.py
Profiling PyTorch/: dist_train.py
